--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "my-project",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://nunthawat.github.io",
+  "homepage": "https://nunthawat.github.io/my-app",
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.2",
     "@testing-library/react": "^12.1.2",
